# ynab-format-csv

./: .bandit.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  debug_notebook.ipynb  pyproject.toml  pyrightconfig.json
.zed/: settings.json
resources/: CapitalOne-Transactions.csv  DiscoverCard-Statement.csv  capitalone-mappings.yaml  discovercard-mapping.yaml
tests/: conftest.py  test_app.py  test_fileio.py
ynab_csv_import/: __main__.py  app.py  dataclasses.py  fileio.py
ynab_csv_import/tests/: test_app.py  test_ynab_import.py
ynab_format_csv/: __main__.py  app.py  dataclasses.py  fileio.py
ynab_format_csv/tests/: test_app.py
