[project]
name = "ynab-format-csv"
version = "0.1.0"
description = "Python script to prepare CSV files for import to YNAB"
authors = [{ name = "Jon Mark Allen", email = "ubahmapk@gmail.com" }]

license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7", "loguru>=0.7.2", "pandas>=2.2.3"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
ynab-format-csv = "ynab_format_csv.app:main"

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "vermin>=1.6.0",
    "pre-commit>=4.0.1",
    "debugpy>=1.8.9",
    "ipykernel>=6.29.5",
    "ruff>=0.9.10",
    "pyright>=1.1.396",
]
