[project]
name = "ynab-format-csv"
version = "0.1.1"
description = "Python script to prepare CSV files for import to YNAB"
authors = [{ name = "Jon Mark Allen", email = "ubahmapk@gmail.com" }]
license = { file = "LICENSE" }

requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "typer>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/ubahmapk/ynab-format-csv"
repository = "https://github.com/ubahmapk/ynab-format-csv.git"


[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "hatchling>=1.26.3",
    "ipython>=9.1.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "vermin>=1.6.0",
]

[project.scripts]
ynab-format-csv = "ynab_format_csv.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
